--- a/style.css
+++ b/style.css
@@ -1,7 +1,77 @@
-h1 {color: black;font-family: 'Trebuchet MS'; font-size: 300%;}
+h1 {color: black;font-family: 'Trebuchet MS'; font-size: 200%;}
 h2 {color: black;font-family: 'Trebuchet MS'; font-size: 200%;}
 h3 {color: black;font-family: 'Trebuchet MS'; font-size: 150%;}
 h4 {color: black;font-family: 'Trebuchet MS'; font-size: 150%;}
 h {color: black;font-family: 'Trebuchet MS'; font-size: 100%;}
 p  {color: black;font-family: 'Trebuchet MS'; font-size: 100%;}
-nav {background-color:rgb(224, 231, 231); text-decoration:none}
+nav {background-color:none; text-decoration:none}
+             .body_container{  padding-top: 80px;
+                               display:flex; 
+                             flex-wrap: nowrap; 
+                             flex-direction: row; justify-content: center;
+                             }
+                 .body_item 
+                             {display:flex; align-content: center;}  
+               .navcontainer {display: flex; padding-top: 10px; padding-left: 30px;
+                             flex-direction: row; align-items: center;
+                            flex-wrap: nowrap; justify-content: flex-start;
+                            }
+               .navitem ul { display:flex; flex-direction: row;list-style-type: none;
+                             margin: 0;
+                             padding-left: 20px;
+                             overflow: hidden;
+                             background-color:none;
+                             position: center; 
+                             }
+       
+                   .navitem ul li a {
+                    padding-left: 10%;
+                        display: inline-block;
+                        color: white;
+                        text-align: center;
+                        padding: 20px 16px;
+                        text-decoration: none;
+                         }
+                .button1 {
+                    background-color:  rgb(181, 181, 241);
+                     border-radius: 20px; clear: both;
+                     position:absolute; font-family: Trebuchet MS;
+                     font-size: 20px;
+                     display: inline-block;
+                     color:white;
+                     text-align: center;
+                     padding: 8px 35px;
+                     text-decoration-color: none;
+                     border-color: rgb(98, 98, 233);
+                     top: 65%;
+                     left: 57%;                           
+                     cursor: pointer;
+                      }
+                   .navitem ul li a:hover {
+                       background-color: #f5eded; 
+                       border-radius: 10%; 
+                           }
+                   button.button1:hover { background-color: #5fb8db;
+                          
+                             }
+
+                     .socialcontainer{display: flex; flex-direction: row;
+                           justify-content:flex-end; padding-right:2%;
+                          
+                           }
+                     .socialitem{padding-right: 3%;}        
+                           Body {background-color: rgb(216, 206, 193);}
+                     body div.name {padding-left: 30%;
+                           }
+
+     @media (max-width: 800px) 
+             {.body_container {flex-direction: column;
+              }}
+     @media (max-width: 800px) 
+             {body div.name {padding-left: 1%;
+              }}
+     @media (max-width: 800px) 
+            {.button1 { top: 110%;
+                left: 20%;;
+               }}
+  
