--- a/style.css
+++ b/style.css
@@ -3,8 +3,16 @@ h2 {color: black;font-family: 'Trebuchet MS'; font-size: 200%;}
 h3 {color: black;font-family: 'Trebuchet MS'; font-size: 150%;}
 h4 {color: black;font-family: 'Trebuchet MS'; font-size: 150%;}
 h {color: black;font-family: 'Trebuchet MS'; font-size: 100%;}
-p  {color: black;font-family: 'Trebuchet MS'; font-size: 100%;}
+p  {color: black;font-family: 'Trebuchet MS'; font-size: 100%;
+     }
 nav {background-color:none; text-decoration:none}
+Body {background-color: rgb(216, 206, 193);}
+a{ text-decoration: none; 
+    background-color:none;color:  black; }
+a:hover { text-decoration-line: underline ; 
+    color:  rgb(98, 98, 233);
+      }
+/* ---------Containers and Item------------*/
              .body_container{  padding-top: 80px;
                                display:flex; 
                              flex-wrap: nowrap; 
@@ -16,6 +24,19 @@ nav {background-color:none; text-decoration:none}
                              flex-direction: row; align-items: center;
                             flex-wrap: nowrap; justify-content: flex-start;
                             }
+  /*-----------Footer Container ----------------------*/                         
+            .socialcontainer{display: flex; flex-direction: row;
+                                justify-content:flex-end; padding-right:10%;
+                                
+                                }
+                 .socialitem{padding-right: 3%;} 
+/*---------------------Project Container----------*/        
+        .project_container_1{display:flex; flex-direction: row;
+                             justify-content: space-evenly;padding-top:1%;
+                             }
+          .project_item_1{}                             
+                                     
+ /*--------- ----------NAVAGATION & BUTTONS -----------*/
                .navitem ul { display:flex; flex-direction: row;list-style-type: none;
                              margin: 0;
                              padding-left: 20px;
@@ -24,10 +45,10 @@ nav {background-color:none; text-decoration:none}
                              position: center; 
                              }
        
-                   .navitem ul li a {
-                    padding-left: 10%;
+             .navitem ul li a {
+                       padding-left: 10%;
                         display: inline-block;
-                        color: white;
+                        color:  rgb(98, 98, 233);
                         text-align: center;
                         padding: 20px 16px;
                         text-decoration: none;
@@ -47,23 +68,15 @@ nav {background-color:none; text-decoration:none}
                      left: 57%;                           
                      cursor: pointer;
                       }
-                   .navitem ul li a:hover {
-                       background-color: #f5eded; 
-                       border-radius: 10%; 
+            .navitem ul li a:hover {
+                    text-decoration-line: underline; 
+                    color:  rgb(50, 45, 51)
                            }
-                   button.button1:hover { background-color: #5fb8db;
-                          
+            button.button1:hover { background-color: #5fb8db;                      
                              }
-
-                     .socialcontainer{display: flex; flex-direction: row;
-                           justify-content:flex-end; padding-right:2%;
-                          
+            body div.name {padding-left: 30%;
                            }
-                     .socialitem{padding-right: 3%;}        
-                           Body {background-color: rgb(216, 206, 193);}
-                     body div.name {padding-left: 30%;
-                           }
-
+/*-----------Responsive Mobile View Home Field---------------*/
      @media (max-width: 800px) 
              {.body_container {flex-direction: column;
               }}
@@ -75,3 +88,7 @@ nav {background-color:none; text-decoration:none}
                 left: 60%;;
                }}
   
+  /*-----------Responsive Mobile View Project Field ---------------*/
+     @media (max-width: 800px) 
+            {.project_container_1{display:flex; flex-direction: column;
+                }}
