--- a/pages/mini-project-1/css/miniproject1style.css
+++ b/pages/mini-project-1/css/miniproject1style.css
@@ -8,11 +8,11 @@
 
                     
   .button1 {border-radius: 10px; clear: both;position: absolute;
-                top: 45%;
+                top: 45%; font-size: 30px; padding: 5px;
                 left: 35%;
                 box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2),
                 0 5px 20px 0 rgba(197, 189, 189, 0.19)
-                font-size: 30px; padding: 5px 10px;position::after;
+                
                  }
   .button1:hover {
                  background-color: #98a398; /* Green */
