--- a/pages/mini-project-1/css/miniproject1style.css
+++ b/pages/mini-project-1/css/miniproject1style.css
@@ -66,7 +66,7 @@
                {.projectlabel{padding-left:1; margin:1;
                     }}
  @media (max-width: 800px) 
-                    {.button1{position:fixed top; left:60%
+  {.button1{position:fixed top; left:60%; top:15%;
                          }}                  
       /* @media (max-wi                
   /* @media (max-width: 800px)  */
