--- a/pages/mini-project-1/css/miniproject1style.css
+++ b/pages/mini-project-1/css/miniproject1style.css
@@ -66,7 +66,7 @@
                {.projectlabel{padding-left:1; margin:1;
                     }}
  @media (max-width: 800px) 
-  {.button1{position:fixed top; left:37%; top:30%;
+  {.button1{position:absolute; left:36%; top:80%;
                          }}                  
       /* @media (max-wi                
   /* @media (max-width: 800px)  */
