--- a/pages/mini-project-1/css/miniproject1style.css
+++ b/pages/mini-project-1/css/miniproject1style.css
@@ -37,10 +37,10 @@
                     100% {color:rgb(39, 37, 45); }
               
                    }
-  .formlenghtsmall{ width: 100%;
-                    height: 1em;} 
-   .formlength{ width: 100%;
-                      height: 1em;}  
+  /* .formlenghtsmall{ width: 100%; */
+                    /* height: 1em;}  */
+   /* .formlength{ width: 100%; */
+                      /* height: 1em;}   */
                                  
   .professionaltext{padding-left: 0%; padding-top: 10%!important;}
   .frontads{padding-left: 15%;}
@@ -56,12 +56,19 @@
   .navfooter{ font-size: 17px;} 
   .brandlogos{padding-left:12% !important;}  
   .paddingfootericon{padding-left:4% !important;}
+  .formwidth{width:600px;}
    /* .pricingbackground{background-color:rgb(212, 222, 228);}                 */      
       
                   
 /****** Pricing CSS section----------------*/
 
  
+@media (max-width: 400px) 
+       {.pricingformpading{padding-left: 2% !important;
+        }}
+@media (max-width: 400px) 
+       {.formwidth{width: 300px !important;
+        }}
 @media (max-width: 800px) 
        {.copyrightpadding{padding-right: 13% !important;
         }}
@@ -79,6 +86,9 @@
 @media(min-width: 400px) 
         {.navpaddingitem{padding:2% !important;
                     }}
+/* @media(max-width: 1024px)  */
+        /* {.navpaddingitem{padding:1% !important; */
+                    /* }} */
                 
 @media (max-width: 800px) 
             {.professionaltext{padding-left: 0;
@@ -97,16 +107,19 @@
 @media (max-width:800px) 
             {.maintext{padding-left: 0;
                 }}
- @media (max-width:420px) 
-        {.killpadding{padding-left: 0;}}
-           
+        
 @media (max-width: 800px) 
      {.contentcsspaddingmobile{padding-left: 0; margin:0;
     }}
- @media (max-width: 800px) 
+ @media (max-width: 1000px) 
      {.aboutuspic{display:none;
     }}
-
+@media (max-width: 800px) 
+    {.aboutuspadding{padding-left:2% !important;
+   }}
+@media (min-width: 801px) 
+    {.aboutuspadding{padding-left:5% !important;
+   }}
 @media (max-width: 800px) 
       {.projectlabel{padding-left:1; margin:1;
                     }}
