--- a/css/mainpagestyle.css
+++ b/css/mainpagestyle.css
@@ -9,84 +9,135 @@
  /*--------NAVAGATION & BUTTONS -----------*/
     a{ text-decoration: none; 
                background-color:none;color:  black; }
-     .navbar { opcaity: 1;
+  .navbar { opcaity: 1;
             -webkit-transition: all 0.3s ease-out;
             -moz-transition: all 0.3s ease-out;
             -ms-transition: all 0.3s ease-out;
             transition: all 0.3s ease-out;
 
               }
-      .hovercolor:hover{color: blue;}
-    .profileimage{opacity: .3; 
+  .hovercolor:hover{color: blue;}
+  .profileimage{opacity: .3; 
                 animation-name: profileanimation;
                        animation-duration: 7s;
                       } 
-     @keyframes profileanimation {
+  @keyframes profileanimation {
             from {opacity:1;}
               to {opacity:.3;}
                       }                
-    .profileimage:hover{opacity: .9; 
+  .profileimage:hover{opacity: .9; 
                       cursor: pointer;
                     }  
-    .navbar{z-index:1;}     
-   .navbar a:hover{  opacity: .5;
+  .navbar{z-index:1;}     
+  .navbar a:hover{  opacity: .5;
                  font-weight: 900;
                   }
 
-    .navbar a:active{ 
+  .navbar a:active{ 
                    font-weight: 900;
                     }
-    a:hover { text-decoration-line: underline ; 
+  a:hover { text-decoration-line: underline ; 
                  color:  rgb(98, 98, 233);
                    }
-    .actionbutton{z-index:1;position:fixed; top: 70%; left: 56%;
+  .actionbutton{z-index:1;position:fixed; top: 70%; left: 56%;
                     
                       }
     /*--------- main page container-----------*/         
       
 /*--------- main page container-----------*/
-     .nameheader{ padding-left:20%; padding-top: 2%;}              
-     span.highlight{color:rgb(98, 98, 233)}
-     span.highlightname{font-weight: bold ;}
+  .nameheader{ padding-left:20%; padding-top: 2%;}              
+  span.highlight{color:rgb(98, 98, 233)}
+  span.highlightname{font-weight: bold ;}
 
-    .navitem ul li a:hover {
+  .navitem ul li a:hover {
             text-decoration-line: underline; 
             color:  rgb(50, 45, 51)
                    }
 
-    .mainpagegrid{padding-left: 20%; padding-top: 5%;}  
+  .mainpagegrid{padding-left: 20%; padding-top: 5%;padding-right:0px;}  
 /*-----------Responsive Mobile View Home Field---------------*/
      
   /*-----------Responsive Mobile View Project Field ---------------*/
-     @media (max-width: 800px) 
-            {.actionbutton{position:fixed; top: 65%; left: 70%;
-                }}
+  @media (max-width: 800px) 
+          {.actionbutton{position:fixed; top: 65%; left: 55%;
+          }}
+  @media (max-width: 500px) 
+          {.nameheader{padding-left: 12% !important;
+          }}
+  @media (max-width: 500px) 
+          {.mainpagegrid{padding-left: 0%; padding-right: 0px;
+          }}   
+  @media (max-width: 500px) 
+          {.responsivepProfile{height: 300px !important ;
+          }} 
+  @media (max-width: 320px) 
+          {.responsivepProfile{height: 250px !important ;
+          }} 
+  @media (min-width: 700px) 
+           {.nameheader{padding-left: 25%; !important;
+          }} 
+  @media (min-width: 1025px) 
+           {.nameheader{padding-left: 18%  !important;
+          }}
+  @media (min-width: 1000px) 
+          {.mainpagegrid{padding-left: 11%  !important;
+         }}
+  @media (max-width: 800px) 
+          {.mainpagegrid{padding-left: 15%; 
+          }} 
 
+          /* 1024 resolution  */
+  @media (max-width: 1024px) 
+          {.nameheader{padding-left: 10%;
+          }}
+  @media (max-width: 1024px) 
+          {.mainpagegrid{padding-left: 10%; padding-right: 0px;
+          }}
+
+        /* 1024 resolution ends here  */  
+
+   @media (max-width: 800px) 
+           {.responsivepProfile{height:400px;
+           }}  
+           
+  @media (max-width: 800px) 
+          {.navbarResponsivePadding{padding-left: 0%; padding-top:5% !important;
+          }}
+  @media (max-width: 800px) 
+          {.responsiveSection{padding-left: 5% !important;
+          }}
+
+   @media (min-width: 1100px)
+           {.mainpagegrid{padding-left: 18% !important; */
+           }}  */
+   @media (min-width: 1100px)
+           {.nameheader{padding-left: 18% !important;
+          }} 
   /* --------------about page section----------------*/
   .description{list-style-type:none;
-  }
-        .list {
+           }
+  .list {S
               font-weight:bolder;
-               }
+          }
 
                  
-    .skill-name{ opacity: .5;
+  .skill-name{ opacity: .5;
        
-                }
-         .skills{ background-color: white;
-                  border: 1px solid rgb(115, 113, 119);
-                  padding: 15px; height: 400px; padding-top:50px;
-                  box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63);
-                 -webkit-box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63);
-                 -moz-box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63); 
-                  } 
-    .skill-name:hover{opacity:1;}        
-    .skill-name{ background-color: white;
-                 border: 1px solid rgb(115, 113, 119);
-                 padding: 15px; height: 400px; padding-top:50px;
-                 box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63);
-                -webkit-box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63);
-                -moz-box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63); 
-                 } 
+           }
+  .skills{ background-color: white;
+           border: 1px solid rgb(115, 113, 119);
+           padding: 15px; height: 400px; padding-top:50px;
+           box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63);
+          -webkit-box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63);
+          -moz-box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63); 
+           } 
+  .skill-name:hover{opacity:1;}        
+  .skill-name{ background-color: white;
+           border: 1px solid rgb(115, 113, 119);
+           padding: 15px; height: 400px; padding-top:50px;
+           box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63);
+          -webkit-box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63);
+          -moz-box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63); 
+          } 
    
                 
