--- a/css/mainpagestyle.css
+++ b/css/mainpagestyle.css
@@ -140,4 +140,15 @@
           -moz-box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63); 
           } 
    
-                
+  /*  -------Project Section CSS------- */
+ 
+       
+.project-name{ opacity: .5;}
+.project-name:hover{opacity:1;}        
+.project-name{ 
+  border: 1px solid rgb(115, 113, 119);
+  width: 370px; height: 220px; padding-top:0px;
+  box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63);
+ -webkit-box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63);
+ -moz-box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63); 
+ } 
