--- a/css/mainpagestyle.css
+++ b/css/mainpagestyle.css
@@ -57,7 +57,14 @@
   .flexcontainer{padding-top:5%;}  
 
   /* --footer section-------- */
-  .footersection{min-height: 100%;margin-bottom:0px;}
+  /* .footersection{position: static;
+                   bottom: 0;
+                    width: 100%;
+                   height: 5%}
+  .footerabout{padding-top:10%; position: static;
+                        bottom: 0;
+                         width: 100%;
+                        height: 5%} */
 /*-----------Responsive Mobile View Home Field---------------*/
      
   /*-----------Responsive Mobile View Project Field ---------------*/
@@ -137,8 +144,32 @@
   @media (max-width: 800px) 
           {.footercContainerMobileRes{flex-direction: column; text-align: center !important;
           }}
+            /* ----Mobile Responsive for Footer Section ends here----- */
+         /* ------main page skill container mobile responisve starts here---- */
+@media (max-width: 319px) 
+       {.skillcontainer{ padding-left: 0%!important;
+         }}
+ @media (min-width: 320px) and (max-width: 375px) 
+          {.skillcontainer{ padding-left: 0%!important;
+           }}
+ @media (min-width: 376px) and (max-width:481px)
+        {.skillcontainerr{ padding-left: 9% !important;
+            }}
+@media (min-width: 482px) and (max-width:700px)
+        {.skillcontainer{ padding-left: 14% !important;
+          }}
+@media (min-width: 701px) and (max-width:900px)
+        {.skillcontainer{ padding-left: 16% !important;
+          }}
+@media (min-width: 901px) and (max-width:991px)
+        {.skillcontainer{ padding-left: 22% !important;
+          }} */
+ /* @media (max-width: 576px) 
+          {.skillcontainer{ flex-direction: column !important;
+           }}
+         /* ------main page skill container mobile responisve ends here---- */
 
-  /* ----Mobile Responsive for Footer Section ends here----- */
+
    /* --------------about page section----------------*/
   .description{list-style-type:none;
            }
@@ -178,3 +209,15 @@
  -webkit-box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63);
  -moz-box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63); 
  } 
+
+ .footerAllPage{
+        align-items:last baseline;
+        display: flex;
+        height:100vh; 
+        justify-content: center;
+        margin: 0;
+        margin-top: 0px;
+        margin-right: 0px;
+        margin-bottom: 0px;
+        margin-left: 0px;
+      }
