--- a/css/mainpagestyle.css
+++ b/css/mainpagestyle.css
@@ -135,13 +135,13 @@
           {.mainpageflexcontainer{ flex-direction: column !important;
            }}
   
-  @media (max-width: 400px) 
+@media (max-width: 400px) 
           {.footerNavMobileRes{flex-direction: column !important;
           }}
-  @media (max-width: 797px) and (min-width: 401px)
+@media (max-width: 797px) and (min-width: 401px)
           {.footerNavMobileRes{justify-content: center !important;
           }}
-  @media (max-width: 800px) 
+@media (max-width: 800px) 
           {.footercContainerMobileRes{flex-direction: column; text-align: center !important;
           }}
             /* ----Mobile Responsive for Footer Section ends here----- */
@@ -178,7 +178,7 @@
           }
 
                  
-  .skill-name{ opacity: .5;
+  .skill-name{ opacity: 1;
        
            }
   .skills{ background-color: white;
@@ -188,7 +188,7 @@
           -webkit-box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63);
           -moz-box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63); 
            } 
-  .skill-name:hover{opacity:1;}        
+  .skill-name:hover{opacity:.5;}        
   .skill-name{ background-color: white;
            border: 1px solid rgb(115, 113, 119);
            padding: 15px; height: 400px; padding-top:50px;
@@ -200,8 +200,8 @@
   /*  -------Project Section CSS------- */
  
        
-.project-name{ opacity: .5;}
-.project-name:hover{opacity:1;}        
+.project-name{ opacity: 1;}
+.project-name:hover{opacity:.5;}        
 .project-name{ 
   border: 1px solid rgb(115, 113, 119);
   width: 370px; height: 220px; padding-top:0px;
