--- a/css/mainpagestyle.css
+++ b/css/mainpagestyle.css
@@ -1,7 +1,10 @@
 
 .accordionheader{font-size: 200px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;}
 
-.background{background-color: rgb(216, 206, 193);font-family: 'Trebuchet MS';}
+.background{
+        background-color: rgb(164, 180, 184);
+        font-family: 'Trebuchet MS';
+       }
 
 /* ---------Call button------------*/
  
@@ -120,7 +123,7 @@
           {.mainpageflexcontainer{ padding-left: 8%!important;
            }}
  @media (min-width: 376px) and (max-width:481px)
-        {.mainpageflexcontainer{ padding-left: 15% !important;
+        {.mainpageflexcontainer{ padding-left: 10% !important;
             }}
 @media (min-width: 482px) and (max-width:700px)
         {.mainpageflexcontainer{ padding-left: 20% !important;
@@ -183,7 +186,7 @@
            }
   .skills{ background-color: white;
            border: 1px solid rgb(115, 113, 119);
-           padding: 15px; height: 400px; padding-top:50px;
+           padding: 15px; height: 350px; padding-top:50px;
            box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63);
           -webkit-box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63);
           -moz-box-shadow: 20px -16px 5px -1px rgba(0,0,0,0.63); 
@@ -221,3 +224,27 @@
         margin-bottom: 0px;
         margin-left: 0px;
       }
+
+.responsivepProfile{
+        border-radius: 5%;
+}
+
+.navbarColor{
+        background-color:#636e70;
+}
+
+/* Background color */
+.about .accordion {
+  background-color: #f0f0f0;
+}
+
+/* Border color */
+.about .accordion-item {
+  border-color: none;
+}
+
+/* Active color */
+.about .accordion-button:not(.collapsed) {
+  background-color: rgb(164, 180, 184);
+  border: none; /* Remove border for active state */
+}
