--- a/css/mainpagestyle.css
+++ b/css/mainpagestyle.css
@@ -58,15 +58,46 @@
         }
 
   .actionbutton{
-        z-index:1;position:absolute; 
+        z-index:1;
+        position: fixed; 
         top: 45%; 
-        left: 50%;
-                    
+        left: 50%; 
+        border-radius: 10px;            
+        background-color: #3b7ed5; 
+        border-color: transparent;
+        box-shadow: 0px 5px 10px 0px rgb(122, 135, 142);
+        color: black;
         }
  
+  .actionbutton:hover{
+       background-color: rgb(73, 73, 88);   
+       border-color: transparent;           
+       }
+
+ .actionbutton:active{
+       transform: translateY(8px) !important;
+      }   
+
+ .actionbutton-submit {
+        border-radius: 10px;            
+        background-color: #3b7ed5; 
+        border-color: transparent;
+        box-shadow: 0px 5px 10px 0px rgb(122, 135, 142);
+        color: black;
+        }
+ 
+ .actionbutton-submit:hover{
+       background-color: rgb(73, 73, 88);   
+       border-color: transparent;           
+       }
+
+ .actionbutton-submit:active{
+       transform: translateY(8px) !important;
+      }  
+
 .resume{
-        display: none;
-}
+       display: none;
+      }
 
 
 .resume-link:hover .resume {
@@ -428,4 +459,16 @@
 
 .modal-body{
         max-width: 400px;
+}
+
+.icon-footer {
+     
+}
+
+.icon-image-footer:hover {
+        opacity: .3;
+}
+
+.icon-footer:hover {
+        color: #b5c2d4 !important;
 }
