--- a/css/mainpagestyle.css
+++ b/css/mainpagestyle.css
@@ -49,7 +49,7 @@
           opacity: .5;
          /* font-weight: 900; */
          color: rgb(15, 62, 81);
-         border-bottom: 1px solid rgb(29, 151, 170);
+         border-bottom: 1px solid rgb(5, 52, 63);
         }
   
  .nav-link:hover {
@@ -450,6 +450,12 @@
 .contact-info-text {
                 padding-left: 10px;
         }
+
+.contact-info-link:hover {
+                color: #1672eb;
+        }
+
+
 .contact-icon {
         width:30px;
 }
